5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1575_1327.log
== TEST (2019-03-28 11:09:40) 
-- CODE:
var1 90 - 55
print (var1)
-- ERROR:
File "XXXX", line 1
    var1 90 - 55
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:09:46) 
-- CODE:
var1 90 - 55
print(var1)
-- ERROR:
File "XXXX", line 1
    var1 90 - 55
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:10:04) 
-- CODE:
var1 = 90 - 55
print(var1)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:10:25) 
-- CODE:
var1 = 90 - 55
print(var1)
-- EXECUTION TIME:
0.214294
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:50:16) 
-- CODE:
# Variavel
Total = 90
Heraclito = 55
# Variavel de Diferença
Diferenca = Heraclito - Total
# Saida
print(Diferenca)
-- EXECUTION TIME:
0.192503
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
-35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:50:38) 
-- CODE:
# Variavel
Total = 90
Heraclito = 55
# Variavel de Diferença
Diferenca = Total - Horaclito
# Saida
print(Diferenca)
-- EXECUTION TIME:
0.141299
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/1327/main.py", line 5, in <module>
    Diferenca = Total - Horaclito
NameError: name 'Horaclito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:50:40) 
-- CODE:
# Variavel
Total = 90
Heraclito = 55
# Variavel de Diferença
Diferenca = Total - Horaclito
# Saida
print(Diferenca)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Diferenca = Total - Horaclito
NameError: name 'Horaclito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:51:03) 
-- CODE:
# Variavel
Total = 90
Heraclito = 55
# Variavel de Diferença
Diferenca = Total - Heraclito
# Saida
print(Diferenca)
-- EXECUTION TIME:
0.203476
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
